updated documentation, refactor workflow tast